2010-11-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added CookieStorage::DomainEntry::swap(). Also added non-member
	swap for it.
	* src/CookieStorage.cc
	* src/CookieStorage.h

2010-11-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made LogFactory::logger_ as SharedHandle<Logger> to make dtor of
	Logger called at the program exit.  Rewritten A2_LOG_* macro and
	moved them to LogFactory.h
	* src/LogFactory.cc
	* src/LogFactory.h
	* src/Logger.cc
	* src/Logger.h

2010-11-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed cuid as cuid_t in DefaultBtMessageDispatcher.
	* src/DefaultBtMessageDispatcher.cc
	* src/DefaultBtMessageDispatcher.h

2010-11-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use format specifier %lld for cuid_t. Defined cuid_t as long long
	int instead of int64_t, since g++ complains int64_t is not
	suitable for %lld.

2010-11-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Replaced StringFormat with fmt

2010-11-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten Logger interface. Logger now writes source file name and
	line number in log file.

2010-11-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made DHTBucketTreeNode non-copyable.
	* src/DHTBucketTree.h

2010-11-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Enter 'end game' mode from the beginning when getting torrent
	metadata for quick data retrieval.
	* src/HandshakeExtensionMessage.cc

2010-11-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Replaced BNode with DHTBucketTreeNode which is 2 times efficient.
	* src/BNode.cc: Removed
	* src/BNode.h: Removed
	* src/DHTBucketTree.cc
	* src/DHTBucketTree.h
	* src/DHTRoutingTable.cc
	* src/DHTRoutingTable.h
	* src/Makefile.am
	* test/BNodeTest.cc: Removed
	* test/DHTBucketTreeTest.cc
	* test/Makefile.am

2010-11-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
